# MongoDB_TPs_and_Projects

./: README.md  pyproject.toml
infrastrucutre/: docker-compose.yml
src/mongodb_tp2/: tp_2_script.py
