[project]
name = "mongodb-tp2"
version = "0.1.0"
description = ""
authors = [
    {name = "0udine",email = "oelalouaoui@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymongo (>=4.15.3,<5.0.0)"
]

[tool.poetry]
packages = [{include = "mongodb_tp2", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
